<?xml version="1.0"?>
<package>
  <name>strands_social</name>
  <version>0.0.2</version>
  <description>The strands_social package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/strands-project/strands_social</url> 

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>datamatrix_read</run_depend>
  <run_depend>fake_camera_effects</run_depend>
  <run_depend>image_branding</run_depend>
  <run_depend>strands_tweets</run_depend>

  <export>
    <metapackage/> 
  </export>
</package>
